debug: add jvm flags for detailed crash reporting